# ChangeLog for dev-perl/extutils-depends
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-depends/ChangeLog,v 1.14 2005/03/07 16:31:35 corsair Exp $

  07 Mar 2005; Markus Rothe <corsair@gentoo.org>
  extutils-depends-0.204.ebuild:
  Stable on ppc64

*extutils-depends-0.205 (07 Mar 2005)

  07 Mar 2005; Michael Cummings <mcummings@gentoo.org>
  +extutils-depends-0.205.ebuild:
  version bump for gtk2-perl

  15 Jan 2005; Markus Rothe <corsair@gentoo.org>
  extutils-depends-0.204.ebuild:
  Added ~ppc64 to KEYWORDS

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*extutils-depends-0.204 (22 Sep 2004)

  22 Sep 2004; Michael Cummings <mcummings@gentoo.org>
  +extutils-depends-0.204.ebuild:
  New version on cpan. Minor bug fixes.

  30 May 2004; Bryan Østergaard <kloeri@gentoo.org>
  extutils-depends-0.202.ebuild:
  Stable on alpha.

  15 Apr 2004; Michael McCabe <randy@gentoo.org>
  extutils-depends-0.202.ebuild:
  adding s390 keywords

  06 Apr 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  extutils-depends-0.202.ebuild:
  Stable on hppa and sparc

*extutils-depends-0.202 (29 Mar 2004)

  29 Mar 2004; Michael Cummings <mcummings@gentoo.org>
  extutils-depends-0.202.ebuild:
  New version, dep for gnome2-perl modules

  24 Dec 2003; Michael Cummings,,, <mcummings@gentoo.org>
  extutils-depends-0.102.ebuild:
  Bumping to stable - no bugs in 4 months

  24 Dec 2003; Michael Cummings,,, <mcummings@gentoo.org>
  extutils-depends-0.101.ebuild:
  Version no longer in CPAN

*extutils-depends-0.102 (18 Aug 2003)

  18 Aug 2003; Michael Cummings <mcummings@gentoo.org>
  extutils-depends-0.102.ebuild:
  CPAN Version bump; minor bug fix

*extutils-depends-0.101 (20 Jul 2003)

  20 Jul 2003; Michael Cummings <mcummings@gentoo.org>
  extutils-depends-0.101.ebuild: