@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-depends/Attic/extutils-depends-0.205.ebuild,v 1.1 2005/03/07 14:49:58 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-depends/Attic/extutils-depends-0.205.ebuild,v 1.2 2005/03/10 13:01:30 mcummings Exp $
 
 inherit perl-module
 
@@ -13,5 +13,5 @@ SRC_URI="mirror://cpan/authors/id/R/RM/RMCFARLA/Gtk2-Perl/${MY_P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~ppc ~sparc ~alpha ~hppa ~amd64 ~s390 ~ppc64"
+KEYWORDS="x86 ~ppc ~sparc ~alpha ~hppa ~amd64 ~s390 ~ppc64"
 IUSE=""
