@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/glib-perl/Attic/glib-perl-1.062.ebuild,v 1.1 2005/03/07 14:53:51 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/glib-perl/Attic/glib-perl-1.062.ebuild,v 1.2 2005/03/10 13:03:13 mcummings Exp $
 
 inherit perl-module
 
@@ -13,7 +13,7 @@ SRC_URI="mirror://cpan/authors/id/T/TS/TSCH/${MY_P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~ppc ~sparc ~alpha ~hppa ~amd64 ~ppc64"
+KEYWORDS="x86 ~ppc ~sparc ~alpha ~hppa ~amd64 ~ppc64"
 IUSE="xml"
 
 RDEPEND=">=x11-libs/gtk+-2*
