@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/extutils-pkgconfig
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-pkgconfig/ChangeLog,v 1.11 2005/03/07 16:32:56 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-pkgconfig/ChangeLog,v 1.12 2005/03/10 13:02:54 mcummings Exp $
+
+  10 Mar 2005; Michael Cummings <mcummings@gentoo.org>
+  extutils-pkgconfig-1.07.ebuild:
+  unmasking for x86 as a dep
 
   07 Mar 2005; Markus Rothe <corsair@gentoo.org>
   extutils-pkgconfig-1.05.ebuild:
