@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/extutils-depends
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-depends/ChangeLog,v 1.14 2005/03/07 16:31:35 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-depends/ChangeLog,v 1.15 2005/03/10 13:01:30 mcummings Exp $
+
+  10 Mar 2005; Michael Cummings <mcummings@gentoo.org>
+  extutils-depends-0.205.ebuild:
+  unmasking for x86 as a dep
 
   07 Mar 2005; Markus Rothe <corsair@gentoo.org>
   extutils-depends-0.204.ebuild:
